updated version of tool v1